fix: order list in customer
