# backend/docs/swagger.json
@@ -836,6 +836,9 @@
                 "total_amount"
             ],
             "properties": {
+                "ai_fee": {
+                    "type": "integer"
+                },
                 "bouquet_type_id": {
                     "type": "string"
                 },
@@ -860,6 +863,13 @@
                 "design_name": {
                     "type": "string"
                 },
+                "flower_cost": {
+                    "description": "Biaya breakdown",
+                    "type": "integer"
+                },
+                "making_fee": {
+                    "type": "integer"
+                },
                 "notes": {
                     "type": "string"
                 },
@@ -878,6 +888,9 @@
                 },
                 "shipping_city": {
                     "type": "string"
+                },
+                "shipping_cost": {
+                    "type": "integer"
                 },
                 "shipping_phone": {
                     "type": "string"
